# autonomous-truck-sim

./: README.md  parking_new.wbt
package_files/autonomous_truck/: CMakeLists.txt  package.xml
package_files/autonomous_truck/launch/: assembler.launch
package_files/autonomous_truck/src/: AT_share_gps.py  AT_share_gps_2.py  cont_laser_assembler.cpp  laser2pc.py  pc1_2_pc2.cpp
package_files/autonomous_truck/src/server/local/: bin  include  lib
package_files/mobile_robot/: .NUParking2.wbproj  CMakeLists.txt  commands.txt  package.xml
package_files/mobile_robot/config/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
package_files/mobile_robot/launch/: amcl.launch  frames.gv  move_base.launch  my_gmapping.launch
package_files/mobile_robot/maps/: map.pgm  map.yaml
package_files/mobile_robot/src/: control.py
package_files/webots_ros/: CMakeLists.txt
package_files/webots_ros/src/: autonomous_truck.cpp  mobile_robot.cpp
src/: Untitled Document
src/package_files/: AT_share_gps.py  autonomous_truck.cpp
src/package_files/server/: server.py
src/worlds/: NUParking1.wbt  NewParking.wbt
worlds/: NUParking2.wbt
